# FairLaunch-Solana

./: Anchor.toml  README.md
frontend/: next.config.js  package.json  tsconfig.json
programs/fairlaunch/: Cargo.toml
programs/fairlaunch/src/: lib.rs
